--- a/expresso_patronum/templates/base.html
+++ b/expresso_patronum/templates/base.html
@@ -55,7 +55,12 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'pedido:meus_pedidos' %}" style="color: #D4AF37; font-family: 'Cinzel', serif;">
-                            🔮 Meus Pedidos
+                            🛒 Meu Caldeirão
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'pedido:historico_pedidos' %}" style="color: #D4AF37; font-family: 'Cinzel', serif;">
+                            📜 Histórico
                         </a>
                     </li>
                     <li class="nav-item">
